--- a/sass/components/__navbar.scss
+++ b/sass/components/__navbar.scss
@@ -59,3 +59,135 @@ nav {
     }
 
 }
+
+
+
+.nav-logo img {
+    width: 100px;
+    height: 100px;
+    margin-left: 10%;
+}
+
+body,
+nav {
+    margin: 0;
+    padding: 0;
+    font-family: "Montserrat", sans-serif;
+
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+    font-family: sans-serif;
+    z-index: 1000;
+    position: fixed;
+    padding: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+ul li {
+    list-style: none;
+    margin-left: 5%;
+}
+
+ul li a {
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+    padding: 20px;
+
+}
+
+ul a:hover {
+    color: rgba(255, 255, 255, 0.533);
+}
+
+ul a {
+    margin-top: 10%;
+}
+
+.home a {
+    color: orangered;
+    border-bottom: 3px solid orangered;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: black;
+    min-width: 160px;
+    z-index: 1;
+    top: 80px;
+}
+
+.dropdown-content li a {
+    text-align: start;
+}
+
+.dropdown-content li a:hover {
+    color: rgba(255, 255, 255, 0.216);
+}
+
+.nav-item.dropdown:hover .dropdown-content {
+    display: block;
+    cursor: pointer;
+}
+
+.dropdown-content li a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    font-size: 20px;
+}
+
+.dropdown-content li {
+    width: 120px;
+    border-bottom: 2px dotted orangered;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+
+.btn a {
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.btn1 {
+    background-color: #2f354200;
+    border-radius: 10px;
+    border: 2px solid white;
+    padding: 10px 20px;
+    font-size: 16px;
+    transition: transform 0.4s;
+}
+
+.button {
+    display: flex;
+    padding: 20px;
+    gap: 15px;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #2f3542;
+    color: #fff;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Montserrat", sans-serif;
+}
