--- a/sass/home.scss
+++ b/sass/home.scss
@@ -3,3 +3,6 @@
 @import "components/_variable";
 @import "components/_button";
 @import "components/_slideshow";
+@import "components/_button";
+@import "components/_variable";
+@import "components/_footer";
