--- a/sass/components/__navbar.scss
+++ b/sass/components/__navbar.scss
@@ -36,7 +36,6 @@ nav {
             a {
                 text-decoration: none;
                 font-size: 25px;
-                color:$text-color-white;
                 padding: 20px;
 
             }
@@ -53,7 +52,7 @@ nav {
 
         .home a {
             color: $text-color-orange;
-            border-bottom: 3px solid $bg-color-navbar;
+            border-bottom: 3px solid orangered;
         }
 
     }
